fix(calendar-beta): Remove slotted days, as it was causing flickering

--- a/packages/genesys-spark-components/src/components/beta/gux-day/gux-day.scss
+++ b/packages/genesys-spark-components/src/components/beta/gux-day/gux-day.scss
@@ -26,7 +26,7 @@
   border-radius: var(--gse-ui-calendarMenu-month-focusBorderRadius);
 }
 
-:host([gux-selected]) {
+:host([aria-current='true']) {
   color: var(--gse-ui-calendarMenu-date-selected-foregroundColor);
   background-color: var(--gse-ui-calendarMenu-date-selected-backgroundColor);
 }
